--- a/client/src/auth/Login.css
+++ b/client/src/auth/Login.css
@@ -2,13 +2,6 @@
     margin-top: 100px;
 }
 
-
-.login
-  button:hover{
-      color: blue;
-  
+.button:hover {
+  color: blue;
   }
-login {
-  background-color: #6e0238;
-
-}
