added icons and changed color

--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -10,7 +10,17 @@ h1 {
   
   body {
     
-    background-color: rgb(230, 176, 176);
+    background-color: rgb(86, 4, 163);
   }
+h1 {
+  font-family: 'Encode Sans Condensed', sans-serif;
+}
 
+
+  img.align-center {
+    display: block;
+    margin: 0px auto;}
+  img.medium {
+    width: 250px;
+    height: 250px;}
   
