--- a/client/src/components/UserProfile.css
+++ b/client/src/components/UserProfile.css
@@ -1,44 +1,34 @@
-.card {
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+.fs35 {
+  font-size: 35px !important;
 }
 
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 0 solid rgba(0,0,0,.125);
-  border-radius: .25rem;
+.mw50 {
+  max-width: 50px !important;
+}
+.mn {
+  margin: 0 !important;
+}
+.mw140 {
+  max-width: 140px !important;
+}
+.mb20 {
+  margin-bottom: 20px !important;
+}
+.mr25 {
+  margin-right: 25px !important;
 }
 
-.card-body {
-  flex: 1 1 auto;
-  min-height: 1px;
-  padding: 1rem;
+.mw40 {
+  max-width: 40px !important;
 }
 
-.gutters-sm {
-  margin-right: -8px;
-  margin-left: -8px;
+.p30 {
+  padding: 30px !important;
 }
 
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
-  padding-right: 8px;
-  padding-left: 8px;
-}
-.mb-3, .my-3 {
-  margin-bottom: 1rem!important;
-}
-
-.bg-gray-300 {
-  background-color: #e2e8f0;
-}
-.h-100 {
-  height: 100%!important;
-}
-.shadow-none {
-  box-shadow: none!important;
+.page-heading {
+position: relative;
+padding: 30px 40px;
+margin: -25px -20px 25px;
+background-color: #ffffff;
 }
