--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -130,5 +130,5 @@ background: #6577C4;}
     background-color: pink;
 }.row div {
     border: 1px solid black;
-    background-color: lightseagreen;
+    background-color: rgb(212, 57, 83);
 }
