--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -24,6 +24,16 @@
   margin-left: 30px;
 }
 
+.mt {
+  margin-top: 300px;
+}
+
+
+.phone-img img {
+  width:100%;
+  height: 230px;
+}
+
 
 .footer-container {
   background-color: #ABDEF3;
