--- a/client/src/components/MyClosetCollection.css
+++ b/client/src/components/MyClosetCollection.css
@@ -1,13 +1,25 @@
 .card{
-    width: 20rem;
-    height: 7.8rem;
+    width: 19rem;
+    height: 7rem;
+    padding-left: 1;
+    padding-right: 1;
 }
 
 .card-img{
-    width: 100%;
-    height: 100%;
-    object-fit: scale-down;
+    /* width: 100%; */
+    /* height: 100%; */
+    /* object-fit: scale-down; */
+    transform: scale(1);
+    transition: transform 0.2s ease;
 }
+
+.card-img:hover{
+    transform: scale(1.05);
+}
+
+/* .overflow{
+    overflow: hidden;
+} */
 
 .card:hover{
     box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253)!important;
@@ -25,8 +37,4 @@
 .container-fluid .row{
     padding-top: .3rem;
     padding-bottom: .5rem;
-}
-
-.responsiveCont{
-
 }
