--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -32,9 +32,14 @@
 .phone-img img {
   width:100%;
   height: 230px;
+
 }
 
 
 .footer-container {
   background-color: #ABDEF3;
+}
+
+.container {
+  font-family: Avenir Next, sans-serif;
 }
