--- a/client/src/components/MyClosetCollection.css
+++ b/client/src/components/MyClosetCollection.css
@@ -32,6 +32,7 @@
 .card:text{
     font-size: .9rem;
     padding: 1rem 1rem;
+    font-family: Avenir Next, sans-serif;
 }
 
 .container-fluid .row{
