--- a/client/src/auth/Login.css
+++ b/client/src/auth/Login.css
@@ -1,7 +1,7 @@
-.mT {
-  margin-top: 200px;
+.pT {
+  margin-top: 10px;
 }
 
-.login-bkg{
-  background-image: url(../assets/images/Register.png);
+.mT {
+  margin-top: 200px;
 }
